# WireFall

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
api/: config.py  logs_service.py  main.py
api/models/: schemas.py
api/routes/: analyze.py  health.py  logs.py  modes.py  pass_request.py  rules.py  ws.py
api/services/: database.py  redis_client.py  ws_manager.py
inference/: ensemble.py  features.py  model.py  rule_generator.py
infrastructure/: docker-compose.yml
infrastructure/docker/: Dockerfile.api  Dockerfile.logs
infrastructure/k8s/: deployment.yaml
infrastructure/nginx/: nginx.conf
model/: batch_inference_pre_Ensebmle.py  benign.json  benign_output.json  debug_distribution.py  deploy.py  malicious.json  single_inference_ensemble.py  train.py  wrong_predictions.txt
model/checkpoints/distilbert_http_mlm_epoch20/: config.json
model/distilbert_http_mlm_epoch20/: added_tokens.json  special_tokens_map.json  tokenizer_config.json
model/samples/: malicious_output.json  training_log.txt
model/scripts/: batch_inference.py  batch_inference_pre_ensemble.py  conf_matrix.py  debug_distribution.py  deploy.py  log_dataloader.py  single_inference.py  single_inference_ensemble.py  train.py
tests/: conftest.py
tests/test_api/: test_analyze.py  test_health.py  test_modes.py  test_rules.py
